# redis

./: .gitignore  README.md
python/: pyproject.toml  serialize.py
python/redis_server/: exceptions.py  handler.py  server.py
python/redis_server/commands/: __init__.py  base.py  decr.py  delete.py  echo.py  exists.py  get.py  incr.py  lpush.py  ping.py  rpush.py  save.py  set.py  store.py
python/redis_server/utils/: __init__.py  timestamp.py
python/src/: handler.py  server.py
python/src/commands/: __init__.py  base.py  decr.py  delete.py  echo.py  exists.py  get.py  incr.py  lpush.py  meta.py  ping.py  rpush.py  save.py  set.py  store.py
python/src/utils/: parser.py
python/tests/: serializer.py  test_parser.py
python/tests/commands/: test_basic_commands.py  test_get.py  test_set.py
python/utils/: __init__.py  parser.py
