[tool.poetry]
name = "redis-server"
version = "0.1.0"
description = ""
authors = ["kanhaya kumar yadav <kanhayaky120@gmail.com>"]
readme = "README.md"
packages = [{include = "redis_server"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

